<resources>
    <string name="app_name">Sensor Configurator</string>

    //Menu
    <string name="title_settings">Settings</string>
    <string name="title_service_menu">Service menu</string>
    <string name="title_commands">Calibration table</string>
    <string name="connecting">Connection</string>
    <string name="value_filtering">Filtration depth</string>
    <string name="max_value">Maximum value</string>
    <string name="min_value">Minimum value</string>
    <string name="protocol">Data types</string>
    <string name="interval">Interval, second</string>
    <string name="power_mode">Signal power</string>
    <string name="beacon">Label mode</string>
    <string name="full">Full</string>
    <string name="Empty">Empty</string>
    <string name="read">Read</string>
    <string name="save">Save</string>
    <string name="select_file">Select file</string>
    <string name="start_update">Start update</string>
    <string name="liter">Liters</string>
    <string name="l">l.</string>
    <string name="level">Level</string>
    <string name="line">" line"</string>
    <string name="share">Send</string>
    <string name="device_parameters">Device parameters</string>
    <string name="command_sleep">Warehouse mode</string>
    <string name="select_file_image">Select firmware file</string>
    <string name="upgrade_firmware">Update software</string>
    <string name="update">Update</string>
    <string name="reboot">Reboot</string>
    <string name="change_password">Change password</string>
    <string name="copyed">" copied"</string>
    <string name="percent">Percent</string>
    <string name="stabilization">Stabilization</string>
    <string name="version_build">Program version</string>
    <string name="name">Name</string>
    <string name="version">software version</string>
    <string name="Vversion">Software version</string>
    <string name="reset_count">Restarts</string>
    <string name="connection_attempts">Connections</string>
    <string name="password_attempts">Authorizations</string>
    <string name="timestamp">Working hours</string>
    <string name="raw_cnt">Counter</string>
    <string name="error">Error</string>
    <string name="error_value">error</string>
    <string name="not">No</string>
    <string name="there_is">There is</string>
    <string name="device_commands">Command</string>
    <string name="title_home">Сurrent data</string>
    <string name="device_search">Device search</string>
    <string name="start_search">Start search</string>
    <string name="status">status</string>
    <string name="disconnected">disconnected</string>
    <string name="connected">connected</string>
    <string name="unknown">unknown</string>
    <string name="clear_table">Clear table</string>
    <string name="opened">open</string>
    <string name="closed">close</string>
    <string name="mini">mini</string>
    <string name="close">Close</string>
    <string name="level_step">Pour step</string>
    <string name="ble_off">Bluetooth off</string>
    <string name="turn_on">Turn On</string>
    <string name="log_off">Log off</string>
    <string name="enter_password">Enter password</string>
    <string name="eight_numbs">8 characters</string>
    <string name="eight_must">Pass must be 8 characters</string>
    <string name="not_empty">Password cannot be empty</string>
    <string name="location_off">Location is off</string>
    <string name="back">back</string>
    <string name="back_to_device">Back to device</string>
    <string name="counter_empty">Counter \'\'Empty\'\'</string>
    <string name="counter_full">Counter \'\'Full\'\'</string>
    <string name="calibration">Calibration</string>
    <string name="chart">Chart</string>
    <string name="auth">authorization</string>
    <string name="send_ok">Command send</string>
    <string name="need_calibration">Need calibration</string>
    <string name="stably">Stably</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="authorization_required">Authorization required</string>
    <string name="password_accepted">Password accepted</string>
    <string name="password_not_accepted">Password not accepted</string>
    <string name="specify_calibration_step">Specify the calibration step</string>
    <string name="not_permission">Sorry, we cannot work with that file without permission!</string>
    <string name="recorded">Recorded</string>
    <string name="apply_full">Apply full</string>
    <string name="apply_empty">Apply empty</string>
    <string name="apply">Apply</string>
    <string name="wait_firmware_mode">Wait for the device to switch to firmware mode</string>
    <string name="expect">Expect</string>
    <string name="preparing_device">Preparing the device</string>
    <string name="success">Success !</string>
    <string name="oad_upgrade_complete">OAD Upgrade complete, device is now resetting</string>
    <string name="select_image">Select Image</string>
    <string name="select_file_firmware">Device is now ready to program, please select file in the next dialog shown after this dialog.</string>
    <string name="download_firmware_image">Download firmware image</string>
    <string name="fullEmpty"><![CDATA[Full < Empty]]></string>
    <string name="maxMin"><![CDATA[Maximum < Minimum]]></string>
    <string name="dialog_new_value">Enter new values</string>
    <string name="comment">Comment</string>
    <string name="address">Net address RS485</string>
    <string name="counter_period">Periods</string>
    <string name="switch_state">Switch state</string>
    <string name="relay_is_open">Relay is open</string>
    <string name="relay_is_close">Relay is close</string>
    <string name="relay_open">Open relay</string>
    <string name="relay_close">Close relay</string>
    <string name="relay_switch">Switch</string>
    <string name="relay_normal_open">Normal-\nopen</string>
    <string name="relay_normal_closed">Normal-\nclosed</string>
    <string name="apply_command">Apply command %s</string>
    <string name="sensor_opening">Sensor opening</string>
    <string name="relay_status_open">Open</string>
    <string name="relay_status_closed">Closed</string>
    <string name="sec">sec</string>
    <string name="error_ble">The sensor out of range. Try again</string>
    <string name="wire">wire</string>
    <string name="magnet">magnet</string>
    <string name="illumination">illumination</string>
    <string name="mac_address">MAC address:</string>
    <string name="file">File:</string>
    <string name="state">State:</string>
    <string name="progress">Progress:</string>
    <string name="signal_level">signal level</string>
    <string name="battery_charge">battery charge</string>
    <string name="battery_voltage">battery voltage</string>
    <string name="external">external</string>
    <string name="internal">internal</string>
    <string name="temperature">temperature</string>
    <string name="fuel_level">fuel level</string>
    <string name="ffuel_level">Fuel level</string>
    <string name="fuel_volume">fuel volume</string>
    <string name="add_line">Add line</string>
    <string name="remove_line">Remove line</string>
    <string name="cancel">Cancel</string>
    <string name="minimal">minimal</string>
    <string name="average">average</string>
    <string name="maximal">maximal</string>
    <string name="mode_beacon">iBeacon</string>
    <string name="major">Group number(Major)</string>
    <string name="minor">Number in group(Minor)</string>
</resources>
