<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gelios.configurator.ui.sensor.fuel.fragments.monitoring.HomeFuelFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_fuel_old" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gelios.configurator.ui.sensor.fuel.fragments.settings.SettingsFuelFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings_fuel" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.gelios.configurator.ui.sensor.fuel.fragments.service_menu.CommandsFuelFragment"
        android:label="@string/title_service_menu"
        tools:layout="@layout/fragment_commands_fuel" />

    <fragment
        android:id="@+id/navigation_commands"
        android:name="com.gelios.configurator.ui.sensor.fuel.fragments.tarirovka.TarirovkaFragment"
        android:label="@string/title_commands"
        tools:layout="@layout/fragment_tarirovka" />

    <action
        android:id="@+id/action_global_navigation_logs"
        app:destination="@id/navigation_logs" />


</navigation>