<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gelios.configurator.ui.sensor.relay.fragments.monitoring.HomeRelayFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_relay" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gelios.configurator.ui.sensor.relay.fragments.settings.SettingsRelayFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings_relay" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.gelios.configurator.ui.sensor.relay.fragments.service_menu.CommandsRelayFragment"
        android:label="@string/title_service_menu"
        tools:layout="@layout/fragment_commands_relay" />

    <action
        android:id="@+id/action_global_navigation_logs"
        app:destination="@id/navigation_logs" />


</navigation>