<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_dark"
    android:minWidth="@dimen/_240sdp"
    android:minHeight="@dimen/_160sdp"
    android:padding="@dimen/_8sdp">

    <TextView
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_new_value"
        android:textColor="@color/textGreyColor"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/value_counter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/value_litr"
        app:layout_constraintEnd_toStartOf="@+id/value_litr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/value_litr"
        tools:text="1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liter"
        android:textColor="@color/textGreyColor"
        app:layout_constraintBottom_toTopOf="@+id/value_litr"
        app:layout_constraintEnd_toEndOf="@+id/value_litr"
        app:layout_constraintStart_toStartOf="@+id/value_litr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="@color/textGreyColor"
        app:layout_constraintBottom_toTopOf="@+id/value_litr"
        app:layout_constraintEnd_toEndOf="@+id/value_level"
        app:layout_constraintStart_toStartOf="@+id/value_level" />

    <EditText
        android:id="@+id/value_litr"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1024" />

    <EditText
        android:id="@+id/value_level"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/value_litr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value_litr"
        tools:text="10" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_button_dark"
        android:text="ok"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_dark"
        android:text="cancel"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>